--- a/samples/Social/Firebase.Auth.Social/MainWindow.xaml
+++ b/samples/Social/Firebase.Auth.Social/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
 
@@ -52,7 +53,21 @@
             VerticalAlignment="Center"
             Margin="30 100 30 0"
             />
-
+        <Button 
+            Grid.Column="2"
+            HorizontalAlignment="Center" 
+            VerticalAlignment="Center" 
+            Content="Login with email" 
+            Click="EmailClick" 
+            />
+        <TextBlock 
+            Grid.Column="2"
+            Text="This will take your usename and password"
+            TextWrapping="Wrap"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Margin="30 100 30 0"
+            />
         <WebBrowser 
             x:Name="Browser"
             Grid.ColumnSpan="2"
